# mostly-harmless

./: .bindown.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  CNAME  CNAME.future  Dockerfile  FUTURE.md  Gemfile  LICENSE  Makefile  README  README.md  Rakefile  TODO.txt  _config.yml  _redirects  age-go-get.html  app.py  archive.today.go  atom.xml  benchdiff.go  bip39.go  bip39_test.go  bugged.go  bugged_fuzz.go  cpace-go-get.html  fb.py  fetch.py  flightdiary.py  get_token.py  gettext.sh  go.mod  go.sum  histogram.go  index-old.html  index.html  index.md  iodined.sh  (+25 more)
Badfish/: finally.js  index.html  removing.html
Biglumber-map/: .gitignore  TODO
CV/: index.html
CVE-2016-2107/: index.html
Dockerfiles/: .gitmodules
Heartbleed/: index.html
HomebrewFormula/: go@1.2.rb  iodine.rb  sshpass.rb  stubby.rb  usb-modeswitch.rb
Ticketbleed/: index.html
a-bug-worth-4200$/: index.html
a-journal-approach-that-actually-works-for-me/: index.html
a-python-github-push-webhook-handler/: index.html
add-support-for-a-new-video-site-to-youtube-dl/: index.html
age-encryption.org/: _redirects
age-tool.com/: _headers  _redirects
allcode/: README  allcode.go  (+2 more)
llm-fragments-go/: README.md  llm_fragments_go.py  pyproject.toml
tripit-to-flightdiary/: .gitignore  Pipfile  README.md  flightdiary.py  flightradar.py  get_token.py  pyproject.toml  sync.py  tax.py  tripit.py  uk.py
tripit-to-flightdiary/.backup/issues/: 2.json  5.json  6.json
tripit-to-flightdiary/.backup/labels/: labels.json
tripit-to-flightdiary/.backup/pulls/: 1.json  3.json  4.json
(+1002 files in other folders)
